--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,18 @@ div.contactMenu {overflow: auto;white-space: nowrap;}
     padding: 0 10px;
 }
 
+#search_contain {
+    padding: 20px 20px 0;
+}
+
+#contact_search_input {
+    height: 50px;
+    border: 1px solid #f3f3f3;
+    background: #f3f3f3;
+    border-radius: 4px;
+    padding: 0 10px; 
+}
+
 #file_filter select {
     height: 50px;
     border: 1px solid #f3f3f3;
@@ -120,4 +132,79 @@ div.contactMenu {overflow: auto;white-space: nowrap;}
 #logo {
     height: 40px;
     margin-bottom: 15px;
+}
+
+.forum_post {
+    padding: 20px;
+    border-bottom: 1px solid #f3f3f3;
+}
+
+.forum_post h6 {
+    margin: 0;
+    font-weight: bold;
+}
+
+.forum_post p {
+    margin: 0;
+}
+
+#contactSearchResults {
+    display: none;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100vh;
+    z-index: 1000;
+    -webkit-box-shadow: 0px 0px 26px 5px rgba(0,0,0,0.15);
+    -moz-box-shadow: 0px 0px 26px 5px rgba(0,0,0,0.15);
+    box-shadow: 0px 0px 26px 5px rgba(0,0,0,0.15);
+    animation: slideOut 0.6s forwards;
+    box-sizing: border-box;
+}
+
+#contact_search_head {
+    width: 100%;
+    height: 60px;
+    border-bottom: 1px solid #f3f3f3;
+    padding: 20px;
+    margin: 0;
+}
+
+.contact_class_head {
+    margin: 0;
+    width: 100%;
+    background: #f3f3f3;
+    padding: 5px 20px;
+}
+
+#contact_search_head p {
+    margin: 0;
+}
+
+@keyframes slideOut {
+    from {
+        right: -300px;
+    }
+    to {
+        right: 0;
+    }
+}
+
+.contact_result {
+    padding: 5px 20px;
+}
+
+.contact_result img {
+    width: 50px;
+    height: 50px;
+    float: left;
+    border-radius: 25px;
+}
+
+.contact_result h5 {
+    line-height: 30px;
+    margin: 0;
+    padding: 10px 20px 10px 60px;
 }
