--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,15 @@ div.contactMenu {overflow: auto;white-space: nowrap;}
     margin: 0;
     padding: 10px 20px 10px 60px;
 }
+
+#copy_url_wrap {
+    display: inline-grid;
+    width: 100%;
+    grid-template-columns: 1fr 100px;
+}
+
+#copy_url_wrap select {
+    height: 40px;
+    border: 0;
+    background: #f3f3f3;
+}
